# AppSamples

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code/: README.md
code/analysis/: README.md  analysis_certs.py  analysis_ip_to_tex.py  analysis_lib copy.py  analysis_lib.py  analysis_mitm.py  analysis_permission.py  analysis_result.py  analysis_searchurl.py  analysis_similarity.py  analysis_space_usage.py  auto_download_apk_from_apk_list.py  auto_jadx copy.py  auto_jadx.py  autorestart.py  autotcpdump.py  emulatorcheck.py  extractwebview.py  getcertandname.py  ip2region.py  libdetector copy.py  libdetector.py  md5_extractor.py  mitm_get_dynamic_config.py  pcap_parse.py  pcap_result_analysis.py  searchurl.py  statistic_permission.py  string_search.py  string_search_all.py  testwebview.py
code/collection/: duplicate_merge.py  moguahashname.py  moguatime.py
dataset/: README.md
examples/: README.md  network_evasion_example.py
prompts/: README.md  app_classification_prompt.md  app_classification_prompt_zh.md
src/: __init__.py
src/collection/: __init__.py  duplicate_merge.py  moguahashname.py  moguatime.py  zhihuaspace.py
src/detection/: __init__.py  analysis_lib.py  analysis_similarity.py  certificate_analyzer.py  compareapk.py  extractwebview.py  libdetector.py  permission_analyzer.py  searchurl.py
src/network/: __init__.py  core.py  detectors.py  find_missing_urls.py  parsers.py
src/utils/: __init__.py  auto_jadx.py  automitm.py  autotcpdump.py  emulatorcheck.py  ip2region.py  newtestip.py  pcap_parse.py  recordflow.py
