[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profit2pitfall"
version = "1.0.0"
description = "A toolkit for analyzing mobile task-oriented scam applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Research Team", email = "yc_guo@stu.hit.edu.cn"}
]
keywords = [
    "android",
    "malware",
    "scam",
    "detection",
    "mobile-security",
    "network-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
full = [
    "scapy>=2.4.5",
    "dpkt>=1.9.7",
    "androguard>=3.3.5",
    "python-Levenshtein>=0.12.2",
]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/lighttt037/AppSamples"
Documentation = "https://github.com/lighttt037/AppSamples#readme"
Repository = "https://github.com/lighttt037/AppSamples.git"
Issues = "https://github.com/lighttt037/AppSamples/issues"

[project.scripts]
profit2pitfall = "src.detection.network_evasion_detector:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
